--- a/Frontend/src/app/app-customer/view/customer-account/c-following/c-following.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-following/c-following.component.html
@@ -32,10 +32,10 @@
   </div>
   <div class="tab-content">
 
-    <div class="tab-pane fade show active" id="client-following-view" role="tabpanel" *ngFor="let business of businesses;let i=index">
+    <div class="tab-pane fade show active" id="client-following-view" role="tabpanel">
       <!--favourite shops grid-->
       <div class="row row-cols-xl-3 row-cols-sm-2 row-cols-1 gy-4 gx-3 gx-xxl-4">
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let business of businesses;let i=index">
           <div class="card card-body h-100 border-0 shadow-sm card-hover ">
             <a class="btn btn-icon btn-primary btn-xs shadow-sm rounded-circle" style="align-self: flex-end;"
                href="#biz-contact-info-view" data-bs-toggle="collapse" aria-expanded="false"
