--- a/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
@@ -18,7 +18,7 @@
   </div>
   <hr class="d-none d-sm-block w-100 mx-4">
   <div class="d-none d-sm-flex align-items-center flex-shrink-0 text-muted"><i class="fi-check-circle me-2"></i><span
-    class="fs-sm mt-n1">6 results</span></div>
+    class="fs-sm mt-n1">{{shops.length}} result{{shops.length>1?'s':''}}</span></div>
 </div>
 <!-- Catalog grid-->
 <div class="row row-cols-xl-3 row-cols-sm-2 row-cols-1 gy-4 gx-3 gx-xxl-4 py-3">
