--- a/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-order/c-order-view/c-order-view.component.html
@@ -81,7 +81,7 @@
                   <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"
                        alt="Annette Black">
                   <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3" style="width: 30%">
-                    <div style="font-weight: bold">
+                    <div style="font-weight: bold" (click)="routeToShop(shop.shop.businessProId)">
                       {{shop.shop.businessName}}
                     </div>
                     <div class="text-muted fw-normal fs-sm">xc</div>
