--- a/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
+++ b/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
@@ -6,7 +6,7 @@
   <section class="container py-5 mt-5 mb-lg-3">
     <div class="row align-items-center mt-md-2">
       <div class="col-lg-7 order-lg-2 mb-lg-0 mb-4 pb-2 pb-lg-0">
-        <img class="d-block mx-auto" src="../../../../assets/img/hero-img.jpg" width="746" alt="Hero image">
+        <img class="d-block mx-auto" src="assets/img/hero-img.jpg" width="746" alt="Hero image">
       </div>
       <div class="col-lg-5 order-lg-1 pe-lg-0">
         <h1 class="display-5 mb-4 me-lg-n5 text-lg-start text-center mb-4"><span style="line-height: 1.4">exploring</span><br>
