--- a/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-search-result/shop-search-result.component.html
@@ -40,7 +40,7 @@
       <a class="nav-link text-center"
          (click)="routeToShop(shop,shop.businessProId)">
         <div class="icon-box-media bg-faded-accent text-accent rounded-circle mb-3 mx-auto">
-          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="60" alt="Annette Black">
+          <img class="rounded-circle" src="assets/img/37.png" width="60" alt="Annette Black">
         </div>
         <h3 class="icon-box-title fs-base mb-0">{{shop.businessName}}</h3>
         <span class="star-rating"><i class="star-rating-icon fi-star-filled active"></i><i
