--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order-view/ba-order-view.component.html
@@ -2,7 +2,7 @@
 <div class="d-flex justify-content-between mb-2">
   <div class="pe-3">
     <div class="d-flex align-items-center mb-2">
-      <img class="rounded-circle me-1" src="../../../../../assets/img/37.png" width="48" alt="Avatar">
+      <img class="rounded-circle me-1" src="assets/img/37.png" width="48" alt="Avatar">
       <div class="ps-2">
         <h6 class="fs-base mb-0">
           {{itemOrder.customerProfile.firstName+' '+itemOrder.customerProfile.lastName}}</h6>
