--- a/Frontend/src/app/view/header/header.component.html
+++ b/Frontend/src/app/view/header/header.component.html
@@ -96,11 +96,11 @@
 
     <div class="dropdown order-lg-3">
       <a href="#" class="d-inline-block py-1" data-bs-toggle="dropdown">
-        <img class="rounded-circle" src="../../../../../assets/img/37.png" width="40" alt="User">
+        <img class="rounded-circle" src="assets/img/37.png" width="40" alt="User">
       </a>
       <div class="dropdown-menu dropdown-menu-end">
         <div class="d-flex align-items-start border-bottom px-3 py-1 mb-2" style="width: 16rem;">
-          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="User">
+          <img class="rounded-circle" src="assets/img/37.png" width="48" alt="User">
           <div class="ps-2" *ngIf="getUser().role==='C'">
             <h6 class="fs-base mb-0">
               {{getUser().customerProfile.firstName+' '+getUser().customerProfile.lastName}}
