--- a/Frontend/src/app/view/login/login.component.html
+++ b/Frontend/src/app/view/login/login.component.html
@@ -6,7 +6,7 @@
       <div class="row mx-0 align-items-center">
         <div class="col-md-6 border-end-md p-4 p-sm-5">
           <h2 class="h3 mb-4 mb-sm-5">Hey there!<br>Welcome back.</h2><img class="d-block mx-auto"
-                                                                           src="../../../assets/img/signin.svg"
+                                                                           src="assets/img/signin.svg"
                                                                            width="344"
                                                                            alt="Illustartion">
           <!-- <div class="mt-4 mt-sm-5">Don't have an account? <a href="#" >Sign up here</a></div> -->
