--- a/Frontend/src/app/app-customer/view/customer-account/c-following/c-following.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-following/c-following.component.html
@@ -42,7 +42,7 @@
                aria-controls="biz-contact-info-view"><i class="fas fa-thumbs-up" (click)="followBusiness(business,i)"></i></a>
             <a class="nav-link text-center"  (click)="routeToShop(business.businessProId)">
               <div class="icon-box-media bg-faded-accent text-accent rounded-circle mb-3 mx-auto">
-                <img class="rounded-circle" src="../../../../../assets/img/37.png" width="60" alt="Annette Black">
+                <img class="rounded-circle" src="assets/img/37.png" width="60" alt="Annette Black">
               </div>
               <h3 class="icon-box-title fs-base mb-0">{{business.businessName}}</h3>
               <span class="star-rating"><i class="star-rating-icon fi-star-filled active"></i><i
