--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -37,7 +37,7 @@
         >
           <img
             class="rounded-circle"
-            src="../../../../assets/img/37.png"
+            src="assets/img/37.png"
             width="48"
             alt="Annette Black"
           />
