--- a/Frontend/src/app/app-shop/view/business-account/ba-reviews/ba-reviews.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-reviews/ba-reviews.component.html
@@ -43,7 +43,7 @@
     <div class="mb-4 pb-4 border-bottom" *ngFor="let businessReview of businessReviews">
       <div class="d-flex justify-content-between mb-3">
         <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                         src="../../../assets/img/37.png" width="48"
+                                                         src="assets/img/37.png" width="48"
                                                          alt="Avatar">
           <div class="ps-2">
             <h6 class="fs-base mb-0">
