--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -293,7 +293,7 @@
           <div class="mb-4 pb-4 border-bottom" *ngFor="let itemPackageReview of itemPackageReviews">
             <div class="d-flex justify-content-between mb-3">
               <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                               src="../../../assets/img/37.png" width="48" alt="Avatar">
+                                                               src="assets/img/37.png" width="48" alt="Avatar">
                 <div class="ps-2">
                   <h6 class="fs-base mb-0">
                     {{itemPackageReview.customerProfile.firstName + ' ' + itemPackageReview.customerProfile.lastName}}
