--- a/Frontend/src/app/view/shop-view/shop-view.component.html
+++ b/Frontend/src/app/view/shop-view/shop-view.component.html
@@ -23,7 +23,7 @@
           <!--Shop information-->
           <div class="offcanvas-header d-block border-bottom pt-0 pt-lg-4 px-lg-0">
             <div class="d-flex d-md-block d-lg-flex align-items-start pt-lg-2 mb-1">
-              <img class="rounded-circle" src="../../../assets/img/37.png" width="48" alt="Annette Black">
+              <img class="rounded-circle" src="assets/img/37.png" width="48" alt="Annette Black">
               <div class="pt-md-2 pt-lg-0 ps-1 ps-md-0 ps-lg-3">
                 <h2 class="fs-lg mb-0">{{businessProfile.dbayUser.username}}</h2>
                 <span class="star-rating"><i class="star-rating-icon fi-star-filled active"></i><i
@@ -227,7 +227,7 @@
                   <div class="mb-4 pb-4 border-bottom" *ngFor="let businessReview of businessReviews">
                     <div class="d-flex justify-content-between mb-3">
                       <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                                       src="../../../assets/img/37.png" width="48"
+                                                                       src="assets/img/37.png" width="48"
                                                                        alt="Avatar">
                         <div class="ps-2">
                           <h6 class="fs-base mb-0">
