--- a/Frontend/src/assets/New folder/icons.css
+++ b/Frontend/src/assets/New folder/icons.css
@@ -22,8 +22,8 @@ body{
   }
 @font-face {
     font-family: 'finder-icons';
-    src: url('/assets/fonts/finder-icons.ttf') format('truetype');
-    src: url('/assets/fonts/finder-icons.woff') format('woff');
+    src: url('../fonts/finder-icons.ttf') format('truetype');
+    /*src: url('../fonts/finder-icons.woff') format('woff');*/
     font-weight: normal;
     font-style: normal;
     font-display: block;
