--- a/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
@@ -44,13 +44,13 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 mb-6" *ngFor='let dbayUserImg of businessProfile.dbayUser.dbayUserImgs;let j = index'>
+          <div class="col-md-6 mb-6" *ngIf="businessProfile.dbayUser.userImgName!==undefined && businessProfile.dbayUser.userImgType!==undefined">
             <div style="position: relative" class="delImgT">
-              <img [src]="getImageSrc(dbayUserImg)" style="margin: 3px;height: 200px;width: 300px">
+              <img [src]="getImageSrc(businessProfile.dbayUser)" style="margin: 3px;height: 200px;width: 300px">
               <span class="delImg">
                     <i class="fi-trash"
                        style="color: red;padding: 5px;background-color: white;border-radius: 10px;cursor: pointer;font-size: 25px;"
-                       (click)="businessProfile.dbayUser.dbayUserImgs.splice(j,1)"></i>
+                       (click)="businessProfile.dbayUser.userImgName=undefined;businessProfile.dbayUser.userImgType=undefined"></i>
                   </span>
             </div>
           </div>
