--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage.component.html
@@ -81,4 +81,5 @@
   </div>
 </div>
 
+<app-ba-manage-package-edit></app-ba-manage-package-edit>
 <app-ba-manage-item-edit></app-ba-manage-item-edit>
