--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -505,15 +505,83 @@
           </form>
         </div>
       </div>
+
+      <div class="tab-pane fade" id="item-review" role="tabpanel">
+        <div class="card card-body">
+          <!-- Reviews-->
+          <div class="mb-4 pb-4 border-bottom">
+            <h3 class="h4 pb-3"><i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>
+              4,9 ({{itemPackageReviews.length}} review{{itemPackageReviews.length>1?'s':''}})
+            </h3>
+            <div
+              class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
+              <a *ngIf="getUser()!==null && getUser().role==='C'" class="btn btn-outline-primary mb-sm-0 mb-3"
+                 href="#add-review" data-bs-toggle="collapse" role="button"
+                 aria-expanded="false" aria-controls="add-review"><i class="fi-edit me-1"></i>Add review</a>
+              <div class="d-flex align-items-center ms-sm-4">
+                <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i
+                  class="fi-arrows-sort text-muted mt-n1 me-2"></i>Sort by:</label>
+                <select class="form-select" id="reviews-sorting">
+                  <option>Newest</option>
+                  <option>Oldest</option>
+                  <option>Popular</option>
+                  <option>High rating</option>
+                  <option>Low rating</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <!-- Review-->
+          <div class="mb-4 pb-4 border-bottom" *ngFor="let itemPackageReview of itemPackageReviews">
+            <div class="d-flex justify-content-between mb-3">
+              <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
+                                                               src="assets/img/37.png" width="48" alt="Avatar">
+                <div class="ps-2">
+                  <h6 class="fs-base mb-0">
+                    {{itemPackageReview.customerProfile.firstName + ' ' + itemPackageReview.customerProfile.lastName}}
+                  </h6>
+                  <!--<span class="star-rating"><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                  <!--class="star-rating-icon fi-star-filled active"></i></span>-->
+                </div>
+              </div>
+              <!--<span class="text-muted fs-sm">Jan 17, 2021</span>-->
+              <span class="text-muted fs-sm">{{itemPackageReview.postedDate}}</span>
+            </div>
+            <p>{{itemPackageReview.description}}</p>
+            <div class="d-flex align-items-center">
+              <button class="btn-like" type="button" (click)="addItemReviewResponse(itemPackageReview,'like')"
+                      [ngStyle]="{'color':
+              itemPackageReview.responseByMe!==undefined?
+              itemPackageReview.responseByMe.response==='like'?'green':'':''}">
+                <i class="fi-like"></i>
+                <span>({{itemPackageReview.likeCount}})</span>
+              </button>
+              <div class="border-end me-1">&nbsp;</div>
+              <button class="btn-dislike" type="button" (click)="addItemReviewResponse(itemPackageReview,'dislike')"
+                      [ngStyle]="{'color':
+              itemPackageReview.responseByMe!==undefined?
+              itemPackageReview.responseByMe.response==='dislike'?'red':'':''}">
+                <i class="fi-dislike"></i>
+                <span>({{itemPackageReview.dislikeCount}})</span>
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
   </div>
   <div class="offcanvas-footer border-top" style="display: block;">
     <ul class="nav nav-tabs justify-content-end" role="tablist">
-      <li class="nav-item me-2">
-        <a id="item-back-btn" class="btn btn-md btn-outline-info" href="#item-view" data-bs-toggle="tab" role="tab"><i
+      <li class="nav-item me-2" *ngIf="backBtn" (click)="backBtn=false">
+        <a id="item-back-btn" class="btn btn-md btn-outline-info item-viewer-g-btn" href="#item-view" data-bs-toggle="tab" role="tab"><i
           class="fi-arrow-back fs-lg me-2"></i>Back</a>
       </li>
-      <li class="nav-item me-2">
+      <li class="nav-item me-2" (click)="backBtn=true">
         <a class="btn btn-md btn-outline-primary" href="#item-edit" data-bs-toggle="tab" role="tab"><i
           class="fi-edit fs-lg me-2"></i>Edit</a>
       </li>
@@ -523,10 +591,15 @@
            (click)="setDialogBox('Do you want to remove <b>'+item.itemPackage.name+'</b> ?',false)">
           <i class="fi-trash fs-lg me-2"></i>Remove</a>
       </li>
+      <li class="nav-item me-2" (click)="backBtn=true">
+        <a class="btn btn-md btn-outline-primary" href="#item-review" data-bs-toggle="tab" role="tab"
+           (click)="getItemPackageReviews()">
+          <i class="fi-star fs-lg me-2"></i>Reviews</a>
+      </li>
       <!--<li class="nav-item me-2">-->
-        <!--<a class="btn btn-md btn-outline-primary" href="#item-package-review" data-bs-toggle="tab" role="tab"-->
-           <!--(click)="getItemPackageReviews()">-->
-          <!--<i class="fi-star fs-lg me-2"></i>Reviews</a>-->
+      <!--<a class="btn btn-md btn-outline-primary" href="#item-package-review" data-bs-toggle="tab" role="tab"-->
+      <!--(click)="getItemPackageReviews()">-->
+      <!--<i class="fi-star fs-lg me-2"></i>Reviews</a>-->
       <!--</li>-->
     </ul>
   </div>
